--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,24 +1,25 @@
 .card {
-  width: 15rem;
-  height: 10rem;
+  width: 10rem;
+  height: 5rem;
   border-radius: 1rem;
 }
 
 .borde {
-  width: 15rem;
-  height: 18rem;
-  margin: 1rem;
-  padding: 0.5rem;
+  width: 13rem;
+  height: 15rem;
+  margin: 1.8rem;
+  padding: 0.2rem;
   display: inline-grid;
   align-content: space-around;
-  background-color: rgba(0, 0, 0, 0.332);
-  box-shadow: 0px 7px 8px 3px rgba(64, 64, 64, 0.415);
+  background-color: rgba(10, 2, 34, 0.955);
+  box-shadow: 0px 7px 8px 3px rgba(198, 21, 21, 0.415);
+  border-radius: 10%;
 }
 
 .imagen {
   background: center;
-  width: 8rem;
-  height: 5rem;
+  width: 80px;
+  height: 50px;
 }
 
 .contenido {
@@ -28,6 +29,7 @@
   flex-direction: column;
   align-content: space-around;
   padding: none;
+  color: aliceblue;
 }
 
 .pais {
@@ -49,7 +51,8 @@
   font-size: 10px;
   padding: 5px;
   cursor: pointer;
-  box-shadow: 2px 1px 2px 1px rgba(0, 0, 0, 0.332);
+  color: aliceblue;
+  box-shadow: 2px 1px 2px 1px rgba(244, 239, 239, 0.332);
 }
 
 .movil_borde {
